--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ body {
 font-family: 'Tilt Prism', sans-serif;
 } */
 
+/* unvisited link */
+a:link {
+  color: white;
+}
+
+/* visited link */
+a:visited {
+  color: black;
+}
+
 img {
 
   height: 300px;
